k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alwaysthere-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alwaysthere-backend
  template:
    metadata:
      labels:
        app: alwaysthere-backend
    spec:
      containers:
      - name: backend
        image: subodh40/alwaysthere-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7001
---
apiVersion: v1
kind: Service
metadata:
  name: alwaysthere-backend
spec:
  selector:
    app: alwaysthere-backend
  ports:
    - protocol: TCP
      port: 7001
      targetPort: 7001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alwaysthere-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alwaysthere-web
  template:
    metadata:
      labels:
        app: alwaysthere-web
    spec:
      containers:
      - name: web
        image: subodh40/alwaysthere-web:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: alwaysthere-web
spec:
  selector:
    app: alwaysthere-web
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
      nodePort: 30007 # Access through minikube
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alwaysthere-blockchain
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alwaysthere-blockchain
  template:
    metadata:
      labels:
        app: alwaysthere-blockchain
    spec:
      containers:
      - name: blockchain
        image: subodh40/alwaysthere-blockchain:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8545
---
apiVersion: v1
kind: Service
metadata:
  name: alwaysthere-blockchain
spec:
  selector:
    app: alwaysthere-blockchain
  ports:
    - protocol: TCP
      port: 8545
      targetPort: 8545
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alwaysthere-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alwaysthere-db
  template:
    metadata:
      labels:
        app: alwaysthere-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: alwaysthere-db
spec:
  selector:
    app: alwaysthere-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
